# multispecqr

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: 01_basic_rgb.py  02_palette_mode.py  03_robustness.py  04_calibration.py  05_batch_processing.py  06_advanced_options.py  07_ml_decoder_training.py  README.md
multispecqr/: README.md  pyproject.toml
multispecqr/src/multispecqr/: __about__.py  __init__.py  _cli.py  calibration.py  decoder.py  encoder.py  palette.py
multispecqr/tests/: __init__.py  test_cli.py  test_integration.py  test_ml_decoder.py  test_palette_decoder.py  test_robustness.py
scripts/: generate_datasets.py  train_and_upload.py
src/multispecqr/: encoder.py  ml_decoder.py
tests/: test_cli.py  test_encoder_comprehensive.py  test_expanded_capacity.py  test_integration.py  test_ml_decoder.py  test_palette_decoder.py  test_robustness.py
