[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multispecqr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Muntaser Syed", email = "jemsbhai@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Muntaser Syed/multispecqr#readme"
Issues = "https://github.com/Muntaser Syed/multispecqr/issues"
Source = "https://github.com/Muntaser Syed/multispecqr"

[tool.hatch.version]
path = "src/multispecqr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/multispecqr tests}"

[tool.coverage.run]
source_pkgs = ["multispecqr", "tests"]
branch = true
parallel = true
omit = [
  "src/multispecqr/__about__.py",
]

[tool.coverage.paths]
multispecqr = ["src/multispecqr", "*/multispecqr/src/multispecqr"]
tests = ["tests", "*/multispecqr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
